
$Id: changes.txt,v 1.80 2006/06/07 12:58:49 qqshka Exp $

----
MVDSV v0.19.25-CVS build 23?? (2006.06.??)
* disconnect <disconn3ct@users.sourceforge.net>
- for developers: move FS-related stuff from common.c to fs.c
- small fixes and cleanups here and there

* qqshka <qqshka@users.sourceforge.net>
- new cvar vip_values which control which vip value assign for particular
  vip password.

  Example, if we talk about ktpro and particular passwords:
  vip_password "justvip demoadmin admin judgeadmin admindemoadmin judgeadmindemoadmin"
  then we must set next vip_values
  vip_values   "1       8         4     20         12             28"

- switching GAME_API_VERSION to 9.
  Only one change, added GAME_CLIENT_SAY, so now qvm mods can handle say/say_team.
- For developers only: now qvm mods can get client state via
  trap_infokey( int edn, "*state", char *valbuff, int sizebuff ).
  Possible states: "free", "zombie", "preconnected", "connected", "spawned", "unknown".
  So u can spot not yet connected clients. Personally, i'm using this in KTX for
  /klist or /fkick. ktpro do this via parsing output of server /status command.
  I'm dislike ktpro way here.

* oldman <oldmanuk@users.sourceforge.net>
- added VWEP support (from ZQuake)
- improved MacOS X/Darwin support

* VVD <vvd0@users.sourceforge.net>
- improved byte order support:
    supported byte order:
      little endian 1234
      big endian 4321
      pdp endian 3412 (middle endian?)
    optimized byte swap functions for i386 arch, therefore no more support of i80386 -
    require i80486 or newer (Anybody use i80386 for runing mvdsv? :-))
    gas2masm was modified:
      .386P changed to .486P
      added commands bswap (require 486), movzbw, movzbl, movzwl, xchgb, xchgw, xchgl
- added initial support of the NetBSD targets
- bugfix from Id Software's QWSV: buffer overflow in loading files (How did it work before???)
- improved bugfix ktpro from 0.19.20-develop: command before first ';' will be executed,